# REP_EDITOR

./: .CMakeLists.txt.swp  .clang-format  .clang-tidy  .gitignore  .install.sh.swp  .rep.cpp.swo  .rep.cpp.swp  .salam.cpp.swp  .test.txt.swp  CMakeLists.txt  color.json  conanfile.txt  cur.cpp  few.cpp  few.txt  install.sh  matn.txt  rep.cpp  salam.cpp  test.txt  test5.txt
.github/workflows/: RepTests.yml
REP/: rep  rep.cpp  test.txt
features/: Insertion.feature  Navigation.feature  TheText.feature  navigation.feature  test.feature  the_text.feature  wef.txt
features/steps/: Insertion.py  Navigation.py  REP  TheText.py  navigation.py  test.py  test.txt  the_text.py  wef.py
src/: ClipBoard.cpp  ClipBoard.h  ColorScheme.cpp  ColorScheme.h  Editor.cpp  Editor.h  File.cpp  File.h  Highlight.cpp  Highlight.h  Insert.h  InsertMode.cpp  InsertMode.h  Mouse.cpp  Mouse.h  NormalMode.cpp  NormalMode.h  Screen.cpp  Screen.h  Syntax.cpp  Syntax.h  color.json  coreinc.h  mouse.cpp  mouse.h
tests/: Editor.cpp  Tests.cpp
